# django-sb-simple-migrations

./: .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .python-version  .shellcheckrc  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  tbump.toml  tox.ini
demoproject/demoproject/: settings.py  urls.py
devops/pypi/: a_pycqa_1_install_dependencies.sh  a_pycqa_2_execute_tests.sh  a_pycqa_3_upload_coverage.sh  b_package_1_build.sh  c_release_1_setup_credentials.sh  c_release_2_publish.sh  setup_poetry.sh  setup_variables.sh
django_sb_simple_migrations/: apps.py  conf.py  version.py
src/django_sb_simple_migrations/: conf.py
src/django_sb_simple_migrations/management/commands/: makemigrations.py  migrate.py
tests/: test_makemigrations.py  test_migrate.py
