[tool.poetry]
name = "django-sb-simple-migrations"
version = "0.5.0"
description = "Django migrations without unnecesary change alert triggers."
authors = [
  "SoftButterfly Development Team <dev@softbutterfly.io>",
  "zodiacfireworks <martin.vuelta@gmail.com>"
]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/softbutterfly/django-sb-simple-migrations"
repository = "https://github.com/softbutterfly/django-sb-simple-migrations"
documentation = "https://github.com/softbutterfly/django-sb-simple-migrations/wiki"
keywords = ["Softbutterfly", "Django", "Migrations"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "django_sb_simple_migrations" }
]
include = [
  "LICENSE.txt",
  "CHANGELOG.md",
]

[tool.poetry.urls]
"Download" = "https://github.com/softbutterfly/django-sb-simple-migrations/archive/v0.5.0.tar.gz"
"Bug Tracker" = "https://github.com/softbutterfly/django-sb-simple-migrations/issues"


[tool.poetry.dependencies]
python = ">= 3.8, < 4.0.0"
Django = "< 5.0.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
black = "^22.3.0"
codecov = "^2.1.12"
coverage = "^6.3.3"
flake8 = "^4.0.1"
flake8-black = "^0.3.3"
jupyterlab = "^3.4.2"
mypy = "^0.950"
pre-commit = "^2.19.0"
pydocstyle = "^6.1.1"
pylint = "^2.13.9"
pylint-django = "^2.5.3"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-vcr = "^1.0.2"
python-dotenv = "^0.20.0"
tox = "^3.25.0"
twine = "^4.0.0"
tbump = "^6.9.0"

[tool.black]
target_version = ['py39']
include = '\.pyi?$'
exclude = '''
/(\.git/
  |\.eggs
  |\.hg
  |__pycache__
  |\.cache
  |\.ipynb_checkpoints
  |\.mypy_cache
  |\.pytest_cache
  |\.tox
  |\.venv
  |_build
  |buck-out
  |build
  |dist
  |legacy
  |example
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
