[tool.poetry]
name = "django-sb-simple-migrations"
version = "0.8.0"
description = "Django migrations without unnecesary change alert triggers."
authors = [
  "SoftButterfly Development Team <dev@softbutterfly.io>",
  "zodiacfireworks <martin.vuelta@gmail.com>"
]
license = "MIT License"
readme = "README.md"
homepage = "https://gitlab.com/softbutterfly/open-source/django-sb-simple-migrations"
repository = "https://gitlab.com/softbutterfly/open-source/django-sb-simple-migrations"
documentation = "https://gitlab.com/softbutterfly/open-source/django-sb-simple-migrations/-/wikis"
keywords = ["Softbutterfly", "Django", "Migrations"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Framework :: Django :: 2",
  "Framework :: Django :: 3",
  "Framework :: Django :: 4",
  "Framework :: Wagtail :: 3",
  "Framework :: Wagtail :: 4",
  "Framework :: Wagtail :: 5",
]
packages = [
    { include = "django_sb_simple_migrations", from = "src" }
]
include = [
  "LICENSE.txt",
  "CHANGELOG.md",
]

[tool.poetry.urls]
"Download" = "https://github.com/softbutterfly/django-sb-simple-migrations/archive/v0.8.0.tar.gz"
"Bug Tracker" = "https://github.com/softbutterfly/django-sb-simple-migrations/issues"


[tool.poetry.dependencies]
python = ">= 3.8.1, < 4.0.0"
Django = "< 5.0.0"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.2"
bandit = "^1.7.5"
black = "^23.3.0"
coverage = "^7.2.7"
flake8 = "^6.0.0"
flake8-black = "^0.3.6"
isort = "^5.12.0"
mypy = "^1.3.0"
pre-commit = "^3.3.3"
pydocstyle = "^6.3.0"
pylint = "^2.17.4"
pylint-django = "^2.5.3"
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
pytest-django = "^4.5.2"
python-dotenv = "^1.0.0"
tbump = "^6.10.0"
tox = "^4.6.2"

[tool.black]
target_version = ['py39']
include = '\.pyi?$'
exclude = '''
/(\.git/
  |\.eggs
  |\.hg
  |__pycache__
  |\.cache
  |\.ipynb_checkpoints
  |\.mypy_cache
  |\.pytest_cache
  |\.tox
  |\.venv
  |_build
  |buck-out
  |build
  |dist
  |legacy
  |example
)/
'''

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "demoproject.settings"
pythonpath = "demoproject"
testpaths = "tests"
python_files = [
  "**/test_*.py",
]
filterwarnings =[
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning"
]
addopts = [
  "--import-mode=importlib",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
